# TVasAI

./: CMakeLists.txt  README.md  clang-format.txt  main.cpp
share/dataset/cpt_TVas/raw/: README.txt
